[tool.poetry]
name = "python-rush"
version = "0.1.0"
description = ""
authors = ["Ivan Yukish <iwan.jukisch@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

